--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,4 @@
 <div class="container">
     <img src="assets/rin.svg" alt="">
+    <!-- <a [routerLink]="[ '/upload']"><p>UPLOAD</p></a> -->
 </div>
