--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,14 @@
 .container{
     position: fixed;
+    margin: 50px 140px;
+    width: calc(100vw - 280px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    a{
+        text-decoration: none;
+        color: #242424;
+        font-weight: bold;
+        font-size: 1.5em;
+    }
 }
