--- a/src/app/components/sub/gallery/gallery.component.html
+++ b/src/app/components/sub/gallery/gallery.component.html
@@ -1,1 +1,26 @@
-<p>gallery works!</p>
+<div class="container">
+    <h1>JOYEUX ANNIVERSAIRE BÉBÉ! ❤❤❤</h1>
+    <h1 id="second">JOYEUX ANNIVERSAIRE BÉBÉ! ❤❤❤</h1>
+    <div class="gallery">
+        <img src="assets/1.JPG" alt="">
+        <img src="assets/2.JPG" alt="">
+        <img src="assets/3.JPG" alt="">
+        <img src="assets/4.JPG" alt="">
+        <img src="assets/5.jpg" alt="">
+        <img src="assets/6.jpg" alt="">
+        <img src="assets/7.jpg" alt="">
+        <img src="assets/8.jpg" alt="">
+        <img src="assets/9.jpg" alt="">
+        <img src="assets/10.JPG" alt="">
+        <img src="assets/11.JPG" alt="">
+        <img src="assets/12.JPG" alt="">
+        <img src="assets/13.jpg" alt="">
+        <img src="assets/14.JPG" alt="">
+        <img src="assets/15.JPG" alt="">
+        <img src="assets/16.jpg" alt="">
+        <img src="assets/17.JPG" alt="">
+    </div>
+</div>
+
+
+
